@@ -1,4 +1,4 @@
-/* Copyright (C) 2004 Bart
+/* Copyright (C) 2004, 2005, 2006, 2007, 2008 Bart Hakvoort
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -22,54 +22,52 @@ namespace GParted
 
 Dialog_Disklabel::Dialog_Disklabel( const Glib::ustring & device_path, const std::vector<Glib::ustring> & disklabeltypes )
 {
-	this ->set_title( String::ucompose( _("Set Disklabel on %1"), device_path ) );
+	/*TO TRANSLATORS: dialogtitle, looks like Create partition table on /dev/hda */
+	this ->set_title( String::ucompose( _("Create partition table on %1"), device_path ) );
 	this ->set_has_separator( false ) ;
 	this ->set_resizable( false );
-	
+
 	hbox = manage( new Gtk::HBox() ) ;
 	this ->get_vbox() ->pack_start( *hbox, Gtk::PACK_SHRINK );
 	
 	vbox = manage( new Gtk::VBox() ) ;
 	vbox ->set_border_width( 10 ) ;
 	hbox ->pack_start( *vbox, Gtk::PACK_SHRINK );
-	
+
 	image .set( Gtk::Stock::DIALOG_WARNING, Gtk::ICON_SIZE_DIALOG ) ;
 	vbox ->pack_start( image, Gtk::PACK_SHRINK );
-	
+
 	vbox = manage( new Gtk::VBox() ) ;
 	vbox ->set_border_width( 10 ) ;
 	hbox ->pack_start( *vbox, Gtk::PACK_SHRINK );
-	
+
 	str_temp = "<span weight=\"bold\" size=\"larger\">" ;
-	str_temp += String::ucompose( _("Set Disklabel on %1"), device_path ) ;
+	/*TO TRANSLATORS: looks like WARNING:  This will ERASE ALL DATA on the ENTIRE DISK /dev/hda */
+	str_temp += String::ucompose( _("WARNING:  This will ERASE ALL DATA on the ENTIRE DISK %1"), device_path ) ;
 	str_temp += "</span>\n" ;
 	vbox ->pack_start( * Utils::mk_label( str_temp ), Gtk::PACK_SHRINK );
-	
-	str_temp = _("A disklabel is a piece of data stored at a well known place on the disk, that indicates where each partition begins and how many sectors it occupies.") ;
-	str_temp += "\n" ;
-	str_temp += _("You need a disklabel if you want to create partitions on this disk.") ;
-	str_temp += "\n\n" ;
-	str_temp += _("By default GParted creates an msdos disklabel.") ;
+
+	str_temp = _("Default is to create an msdos partition table.") ;
 	str_temp += "\n" ;
 	vbox ->pack_start( * Utils::mk_label( str_temp, true, Gtk::ALIGN_LEFT, Gtk::ALIGN_CENTER, true ),
 			   Gtk::PACK_SHRINK );
-		
+	
 	//advanced
 	str_temp = "<b>" ;
 	str_temp += _("Advanced") ;
 	expander_advanced .set_label( str_temp + "</b>" ) ;
 	expander_advanced .set_use_markup( true ) ;
-		
-	vbox ->pack_start( expander_advanced, Gtk::PACK_SHRINK ) ;
 	
+	vbox ->pack_start( expander_advanced, Gtk::PACK_SHRINK ) ;
+
 	hbox = manage( new Gtk::HBox( false, 5 ) ) ;
 	hbox ->set_border_width( 5 ) ;
-	str_temp = _("Select new labeltype:") ;
+	str_temp = _("Select new partition table type:") ;
 	str_temp += "\t" ;
 	hbox ->pack_start( * Utils::mk_label( str_temp ), Gtk::PACK_SHRINK );
 	expander_advanced .add( *hbox ) ;
-	
-	//create and add combo with labeltypes
+
+	//create and add combo with partition table types (label types)
 	this ->labeltypes = disklabeltypes ;
 	
 	for ( unsigned int t = 0 ; t < labeltypes .size() ; t++ )
@@ -77,14 +75,25 @@ Dialog_Disklabel::Dialog_Disklabel( const Glib::ustring & device_path, const std
 	
 	combo_labeltypes .set_active( 0 ) ;
 	hbox ->pack_start( combo_labeltypes, Gtk::PACK_SHRINK ) ;
-		
+
 	//standard warning	
-	str_temp = "\n <i>" ;
-	str_temp += String::ucompose( _("WARNING: Creating a new disklabel will erase all data on %1!"), device_path ) ;
+	str_temp = "\n<i>" ;
+	str_temp += _("Choosing ") ;
+	str_temp += "<b>" ;
+	/*TO TRANSLATORS: This is the name of the button Gtk::RESPONSE_OK below. */
+	str_temp += _("Create") ;
+	str_temp += "</b>" ;
+	str_temp += _(" will") ;
+	str_temp += ":\n     - " ;
+	/*TO TRANSLATORS: looks like IMMEDIATELY ERASE ALL DATA on disk /dev/hda */
+	str_temp += String::ucompose( _("IMMEDIATELY ERASE ALL DATA on disk %1"), device_path ) ;
+	str_temp += "\n     - " ;
+	/*TO TRANSLATORS: looks like Create a new partition table on disk /dev/hda */
+	str_temp += String::ucompose( _("Create a new partition table on disk %1"), device_path ) ;
 	str_temp += "\n</i>";
-	
-	this ->get_vbox() ->pack_start( * Utils::mk_label( str_temp ), Gtk::PACK_SHRINK );	
-		
+	vbox ->pack_start( * Utils::mk_label( str_temp, true, Gtk::ALIGN_LEFT, Gtk::ALIGN_CENTER, true ),
+			   Gtk::PACK_SHRINK );
+			
 	this ->add_button( Gtk::Stock::CANCEL, Gtk::RESPONSE_CANCEL );
 	this ->add_button( _("Create"), Gtk::RESPONSE_OK );
 		
