@@ -1,3 +1,15 @@
+2008-04-18  Curtis Gedak  <gedakc@gmail.com>
+
+	* src/Dialog_Disklabel.cc,
+	  src/Win_GParted.cc: Changed device menu item and description
+	  - Menu text changed from "set disklabel..."
+	    to "Create Partition Table..."
+	  - Significant change in the wording to increase awareness that
+	    setting a disk label (creating a partition table) will
+	    ERASE ALL DATA on the disk.
+	  - Removed double confirmation of partition table creation
+	  - Closes GParted bug #422070 
+
 2008-04-14  Curtis Gedak  <gedakc@gmail.com>
 
 	* Makefile.am,
